fixed issue on mobile not chaning path when swiping

--- a/src/assets/styles/cmps/_app.scss
+++ b/src/assets/styles/cmps/_app.scss
@@ -1,5 +1,5 @@
 $screen_height: 100vh;
-$margin: 6rem;
+$margin: 6.2rem;
 
 .App {
     position: relative;
